[package]
name = "ustunet"
version = "0.2.0"
authors = ["wzhd"]
edition="2018"

[dependencies]
managed = { version = "0.7", default-features = false, features = ["map"] }
log = "0.3"
tun = { version = "0.4.4" }
tokio-fd = "0.3.0"
tokio-stream = "0.1.5"
tokio-util = {version = "0.6.6", features = ["time"]}
snafu = "0.6.10"
futures = "0.3"
tracing = "0.1"
tracing-futures = "0.2.5"

[dependencies.trilock]
git = "https://github.com/wzhd/trilock.git"

[dependencies.smoltcp]
git = "https://github.com/sanjitako/smoltcp"
default-features = true

[dependencies.tokio]
version = "1"
features = [
  "sync",
  "time",
  "signal",
  "rt-multi-thread",
  "io-util",
  "io-std",
  "macros",
]

[dev-dependencies]
tracing-subscriber = "0.2.17"
pretty_env_logger = "0.4"
argh = "0.1"
